# ITER-transformers-for-tokamak-timeseries

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/experiments/: patchtst_components.ipynb  test.ipynb  test_PatchFM.py  test_huggingface_pretrained.ipynb  test_patchtst_pendulum.ipynb  test_timesfm_simon.py  timesfm_components.ipynb
notebooks/experiments/checkpoint/patchtst/electricity/pretrain/logs/: events.out.tfevents.1759308690.98dci4-srv-1003.iter.org.202867.0
src/transformers_for_timeseries/config_and_scripts/: n1_settings.py
src/transformers_for_timeseries/data_loading/: synthetic_pendulum_creation.py
src/transformers_for_timeseries/ml_tools/: metrics.py  pytorch_device_selection.py  random_seeds_setting.py  train_callbacks.py
src/transformers_for_timeseries/models/: timesfm_features_extraction.py  trans_scinet.py
src/transformers_for_timeseries/utils/: synthetic_dataset_creation.py  synthetic_pendulum_evaluation.py  trainer.py
