[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transformers-for-timeseries"
version = "0.1.0"
description = "Try to see if transformers can create a good latent representation of magnetics timeseries."
authors = [{ name = "Louis Brusset", email = "louis.brusset@etu.minesparis.psl.eu" }]
requires-python = ">=3.9,<3.12"    # Python 3.11 recommended
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["pytorch", "PatchTST", "transformers", "representation-learning", "transfer-learning", "deep-learning"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "matplotlib>=3.9.0",
    "numpy>=1.24.0,<2.3.2",
    "pandas==2.2.2",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.0",
    "seaborn>=0.13.0",
    "tqdm>=4.67.0",
    "torch>=2.2.0,<2.5.0",
    "ipykernel>=6.29.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "transformers",
    "granite-tsfm @ git+https://github.com/ibm-granite/granite-tsfm.git",
    "tensorboard>=2.20.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.4.0",
    "flake8>=7.0.0",
    "mypy>=1.10.0"
]

[project.urls]
Repository = "https://github.com/LouisBrusset/ITER-transformers-for-tokamak-timeseries"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["transformers_for_timeseries*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=. --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = 3.11
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
